# smg

./: .gitignore  CMakeLists.txt  README.md  cluster.py  main.c  prune_graph.py  split_gfa.py  traverse.py
scripts/: analyze_mmers.py  reduce_graph.py
